Item: Fixed overlapping of items' names.

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -52,7 +52,7 @@
 }
 
 .item-name {
-  width: 100%;
+  width: 100px;
   border: 1px solid transparent;
   padding: 1px 1px 1px 2px;
   height: 22px;
